5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4374/executions/1633_2944.log
== TEST (2019-04-02 19:00:02) 
-- CODE:
float(input("quantidade de panquecas"))
ovos=1
leite=0.180
farinha=0.110
-- OUTPUT:
103630.85
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:00:36) 
-- CODE:
float(input("quantidade de panquecas"))
ovos=1
leite=0.180
farinha=0.110
-- OUTPUT:
103630.85
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 19:00:48) 
-- CODE:
float(input("quantidade de panquecas"))
ovos=1
leite=0.180
farinha=0.110
-- EXECUTION TIME:
0.132521
-- TEST CASE 1:
---- input:
4
---- correct output:
0.5
90.0
55.0
---- user output:

-- TEST CASE 2:
---- input:
20
---- correct output:
2.5
450.0
275.0
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:00:55) 
-- CODE:
float(input("quantidade de panquecas"))
ovos=1
leite=0.180
farinha=0.110
-- OUTPUT:
103630.85
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:02:38) 
-- CODE:
float(input("quantidade de panquecas"))
ovos=1
leite=0.180
farinha=0.110

-- OUTPUT:
103630.85
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:06:05) 
-- CODE:
float(input("quantidade de panquecas"))
ovos=0.125*quantidades de panquecas
leite=0.180*quantidade de panquecas
farinha=0.110*quantidade de panquecas

-- ERROR:
File "XXXX", line 2
    ovos=0.125*quantidades de panquecas
                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:06:35) 
-- CODE:
float(input("quantidade de panquecas"))
ovos=0.125 * ("quantidades de panquecas")
leite=0.180*quantidade de panquecas
farinha=0.110*quantidade de panquecas

-- ERROR:
File "XXXX", line 3
    leite=0.180*quantidade de panquecas
                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:07:15) 
-- CODE:
float(input("quantidade de panquecas"))
ovos=0.125 * ("quantidades de panquecas")
leite=0.180 * ("quantidade de panquecas")
farinha=0.110 * ("quantidade de panquecas")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    ovos=0.125 * ("quantidades de panquecas")
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:07:31) 
-- CODE:
float(input("quantidade de panquecas"))
ovos=0.125 * ("quantidades de panquecas")
leite=0.180 * ("quantidade de panquecas")
farinha=0.110 * ("quantidade de panquecas")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    ovos=0.125 * ("quantidades de panquecas")
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:08:36) 
-- CODE:
float(input("quantidade de panquecas"))
ovos=0.125 * ("quantidades de panquecas")
leite=0.180 * ("quantidade de panquecas")
farinha=0.110 * ("quantidade de panquecas")

print("ovos")
print("leite")
print("farinha")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    ovos=0.125 * ("quantidades de panquecas")
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 19:08:45) 
-- CODE:
float(input("quantidade de panquecas"))
ovos=0.125 * ("quantidades de panquecas")
leite=0.180 * ("quantidade de panquecas")
farinha=0.110 * ("quantidade de panquecas")

print("ovos")
print("leite")
print("farinha")
-- EXECUTION TIME:
0.168666
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1633/2944/main.py", line 2, in <module>
    ovos=0.125 * ("quantidades de panquecas")
TypeError: can't multiply sequence by non-int of type 'float'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:08:47) 
-- CODE:
float(input("quantidade de panquecas"))
ovos=0.125 * ("quantidades de panquecas")
leite=0.180 * ("quantidade de panquecas")
farinha=0.110 * ("quantidade de panquecas")

print("ovos")
print("leite")
print("farinha")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    ovos=0.125 * ("quantidades de panquecas")
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:09:03) 
-- CODE:
float(input("quantidade de panquecas"))
ovos=0.125 * ("quantidades de panquecas")
leite=0.180 * ("quantidade de panquecas")
farinha=0.110 * ("quantidade de panquecas")

print("ovos")
print("leite")
print("farinha")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    ovos=0.125 * ("quantidades de panquecas")
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:09:31) 
-- CODE:
(input("quantidade de panquecas"))
ovos=0.125 * ("quantidades de panquecas")
leite=0.180 * ("quantidade de panquecas")
farinha=0.110 * ("quantidade de panquecas")

print("ovos")
print("leite")
print("farinha")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    ovos=0.125 * ("quantidades de panquecas")
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:09:38) 
-- CODE:
input("quantidade de panquecas")
ovos=0.125 * ("quantidades de panquecas")
leite=0.180 * ("quantidade de panquecas")
farinha=0.110 * ("quantidade de panquecas")

print("ovos")
print("leite")
print("farinha")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    ovos=0.125 * ("quantidades de panquecas")
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:09:59) 
-- CODE:
input("quantidade de panquecas")
ovos=0.125 * ("quantidades de panquecas")
leite=0.180 * ("quantidade de panquecas")
farinha=0.110 * ("quantidade de panquecas")

print("ovos")
print("leite")
print("farinha")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    ovos=0.125 * ("quantidades de panquecas")
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:10:19) 
-- CODE:
float(input("quantidade de panquecas"))
ovos=0.125 * ("quantidades de panquecas")
leite=0.180 * ("quantidade de panquecas")
farinha=0.110 * ("quantidade de panquecas")

print("ovos")
print("leite")
print("farinha")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    ovos=0.125 * ("quantidades de panquecas")
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:10:36) 
-- CODE:
float(input("quantidade de panquecas"))
ovos=0.125 * ("quantidades de panquecas")
leite=0.180 * ("quantidade de panquecas")
farinha=0.110 * ("quantidade de panquecas")

print("ovos")
print("leite")
print("farinha")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    ovos=0.125 * ("quantidades de panquecas")
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:10:53) 
-- CODE:
float(input("quantidade de panquecas"))
ovos=0.125 * "quantidades de panquecas"
leite=0.180 * ("quantidade de panquecas")
farinha=0.110 * ("quantidade de panquecas")

print("ovos")
print("leite")
print("farinha")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    ovos=0.125 * "quantidades de panquecas"
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:11:38) 
-- CODE:
float(input("quantidade de panquecas"))
ovos=0.125 * ("quantidades de panquecas")
leite=0.180 * ("quantidade de panquecas")
farinha=0.110 * ("quantidade de panquecas")

print("ovos")
print("leite")
print("farinha")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    ovos=0.125 * ("quantidades de panquecas")
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:11:53) 
-- CODE:
float(input("quantidade de panquecas"))
ovos=0.125 * ("quantidades de panquecas")
leite=0.180 * ("quantidade de panquecas")
farinha=0.110 * ("quantidade de panquecas")

print("ovos")
print("leite")
print("farinha")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    ovos=0.125 * ("quantidades de panquecas")
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:12:17) 
-- CODE:
float(input("quantidade de panquecas"))
ovos=0.125 * ("quantidades de panquecas")
leite=0.180 * ("quantidade de panquecas")
farinha=0.110 * ("quantidade de panquecas")

print("ovos")
print("leite")
print("farinha")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    ovos=0.125 * ("quantidades de panquecas")
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:12:57) 
-- CODE:
panquecas=float(input("quantidade de panquecas"))
ovos=0.125 * ("quantidades de panquecas")
leite=0.180 * ("quantidade de panquecas")
farinha=0.110 * ("quantidade de panquecas")

print("ovos")
print("leite")
print("farinha")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    ovos=0.125 * ("quantidades de panquecas")
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:13:12) 
-- CODE:
panquecas=float(input("quantidade de panquecas"))
ovos=0.125 * panquecas
leite=0.180 * ("quantidade de panquecas")
farinha=0.110 * ("quantidade de panquecas")

print("ovos")
print("leite")
print("farinha")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    leite=0.180 * ("quantidade de panquecas")
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:13:41) 
-- CODE:
panquecas=float(input("quantidade de panquecas"))
ovos=0.125 * panquecas
leite=0.180 * panquecas
farinha=0.110 * panquecas

print("ovos")
print("leite")
print("farinha")
-- OUTPUT:
ovos
leite
farinha
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:14:18) 
-- CODE:
panquecas=float(input("quantidade de panquecas"))
ovos=0.125 * panquecas
leite=0.180 * panquecas
farinha=0.110 * panquecas

print("0.125 * panquecas")
print("leite")
print("farinha")
-- OUTPUT:
0.125 * panquecas
leite
farinha
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:15:19) 
-- CODE:
panquecas=float(input("quantidade de panquecas"))
ovos=0.125 * "panquecas"
leite=0.180 * "panquecas"
farinha=0.110 * "panquecas

print("ovos")
print("leite")
print("farinha")
-- ERROR:
File "XXXX", line 4
    farinha=0.110 * "panquecas
                             ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:15:30) 
-- CODE:
panquecas=float(input("quantidade de panquecas"))
ovos=0.125 * "panquecas"
leite=0.180 * "panquecas"
farinha=0.110 * "panquecas"

print("ovos")
print("leite")
print("farinha")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    ovos=0.125 * "panquecas"
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:18:07) 
-- CODE:
panquecas=float(input("quantidade de panquecas"))
ovos=0.125 * "panquecas"
leite=0.180 * "panquecas"
farinha=0.110 * "panquecas"

print(0.125 * "panquecas")
print("leite")
print("farinha")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    ovos=0.125 * "panquecas"
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:19:08) 
-- CODE:
panquecas=float(input("quantidade de panquecas"))
ovos=0.125 * "panquecas"
leite=0.180 * "panquecas"
farinha=0.110 * "panquecas"

print(0.125 * "panquecas")
print(0.180 * "panquecas")
print(0.110 * "panquecas")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    ovos=0.125 * "panquecas"
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:19:23) 
-- CODE:
panquecas=float(input("quantidade de panquecas"))

print(0.125 * "panquecas")
print(0.180 * "panquecas")
print(0.110 * "panquecas")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(0.125 * "panquecas")
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:22:34) 
-- CODE:
panquecas=float(input("quantidade de panquecas"))
ovos=0.125 * panquecas
leite=0.180 * panquecas
farinha=0.110 * panquecas
print("ovos")
print("leite")
print("farinha")
-- OUTPUT:
ovos
leite
farinha
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:23:04) 
-- CODE:
panquecas=float(input("quantidade de panquecas"))
ovos=0.125 * panquecas
leite=0.180 * panquecas
farinha=0.110 * panquecas
print(ovos)
print(leite)
print(farinha)
-- OUTPUT:
0.5
0.72
0.44
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 19:23:17) 
-- CODE:
panquecas=float(input("quantidade de panquecas"))
ovos=0.125 * panquecas
leite=0.180 * panquecas
farinha=0.110 * panquecas
print(ovos)
print(leite)
print(farinha)
-- EXECUTION TIME:
0.218003
-- TEST CASE 1:
---- input:
4
---- correct output:
0.5
90.0
55.0
---- user output:
0.5
0.72
0.44
-- TEST CASE 2:
---- input:
20
---- correct output:
2.5
450.0
275.0
---- user output:
2.5
3.5999999999999996
2.2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:23:20) 
-- CODE:
panquecas=float(input("quantidade de panquecas"))
ovos=0.125 * panquecas
leite=0.180 * panquecas
farinha=0.110 * panquecas
print(ovos)
print(leite)
print(farinha)
-- OUTPUT:
0.5
0.72
0.44
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 19:23:27) 
-- CODE:
panquecas=float(input("quantidade de panquecas"))
ovos=0.125 * panquecas
leite=0.180 * panquecas
farinha=0.110 * panquecas
print(ovos)
print(leite)
print(farinha)
-- EXECUTION TIME:
0.161159
-- TEST CASE 1:
---- input:
4
---- correct output:
0.5
90.0
55.0
---- user output:
0.5
0.72
0.44
-- TEST CASE 2:
---- input:
20
---- correct output:
2.5
450.0
275.0
---- user output:
2.5
3.5999999999999996
2.2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:23:35) 
-- CODE:
panquecas=float(input("quantidade de panquecas"))
ovos=0.125 * panquecas
leite=0.180 * panquecas
farinha=0.110 * panquecas
print(ovos)
print(leite)
print(farinha)
-- OUTPUT:
0.5
0.72
0.44
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:24:21) 
-- CODE:
panquecas=float(input("quantidade de panquecas"))
ovos=0.125 * panquecas
leite=0.180 * panquecas
farinha=0.110 * panquecas
print(ovos)
print(leite)
print(farinha)
-- OUTPUT:
0.5
0.72
0.44
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:26:03) 
-- CODE:
panquecas=float(input("quantidade de panquecas"))
ovos=0.125 * panquecas
leite=0.225 * panquecas
farinha=0.1375 * panquecas
print(ovos)
print(leite)
print(farinha)
-- OUTPUT:
0.5
0.9
0.55
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 19:26:11) 
-- CODE:
panquecas=float(input("quantidade de panquecas"))
ovos=0.125 * panquecas
leite=0.225 * panquecas
farinha=0.1375 * panquecas
print(ovos)
print(leite)
print(farinha)
-- EXECUTION TIME:
0.157058
-- TEST CASE 1:
---- input:
4
---- correct output:
0.5
90.0
55.0
---- user output:
0.5
0.9
0.55
-- TEST CASE 2:
---- input:
20
---- correct output:
2.5
450.0
275.0
---- user output:
2.5
4.5
2.75
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:26:13) 
-- CODE:
panquecas=float(input("quantidade de panquecas"))
ovos=0.125 * panquecas
leite=0.225 * panquecas
farinha=0.1375 * panquecas
print(ovos)
print(leite)
print(farinha)
-- OUTPUT:
0.5
0.9
0.55
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:26:49) 
-- CODE:
panquecas=float(input("quantidade de panquecas"))
ovos=0.125 * panquecas
leite=022.5 * panquecas
farinha=0.1375 * panquecas
print(ovos)
print(leite)
print(farinha)
-- OUTPUT:
0.5
90.0
0.55
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:27:10) 
-- CODE:
panquecas=float(input("quantidade de panquecas"))
ovos=0.125 * panquecas
leite=022.5 * panquecas
farinha=0137.5 * panquecas
print(ovos)
print(leite)
print(farinha)
-- OUTPUT:
0.5
90.0
550.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:27:26) 
-- CODE:
panquecas=float(input("quantidade de panquecas"))
ovos=0.125 * panquecas
leite=022.5 * panquecas
farinha=013.75 * panquecas
print(ovos)
print(leite)
print(farinha)
-- OUTPUT:
0.5
90.0
55.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 19:27:35) 
-- CODE:
panquecas=float(input("quantidade de panquecas"))
ovos=0.125 * panquecas
leite=022.5 * panquecas
farinha=013.75 * panquecas
print(ovos)
print(leite)
print(farinha)
-- EXECUTION TIME:
0.21656
-- TEST CASE 1:
---- input:
4
---- correct output:
0.5
90.0
55.0
---- user output:
0.5
90.0
55.0
-- TEST CASE 2:
---- input:
20
---- correct output:
2.5
450.0
275.0
---- user output:
2.5
450.0
275.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
